refactored code and fixed spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.success-keys {
+span {
   color: red;
 }
 
